* OTH#0000 Call reduce method properly in terminate method
* BUG#7682 Cancel invoices after reduction date
* FEA#7616 Add a wizard which allows cancelling a contract's reduction
* FEA#7601 Forbid endorsement cancellation on reduced contracts

Version 1.14 - 2017-11-09
* FEA#6682 Module Creation