@@ -17,3 +17,4 @@ xml:
     event_type.xml
     contract.xml
     wizard.xml
+    rule_engine.xml
