@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/notebook/page[@id='main_data']/field[@name='sub_status']" position="after">
+        <label name="reduction_value"/>
+        <field name="reduction_value"/>
+    </xpath>
+</data>
