@@ -1,3 +1,4 @@
+* FEA#7777 Stockage de la valeur réduite afin de s'assurer de sa stabilité
 * OTH#0000 Correction de l'appel à la méthode reduce dans la méthode terminate
 * BUG#7682 Annulation des quittances postérieures à la date de mise en réduction
 * FEA#7616 Ajout d'un assistant permettant l'annulation de la mise en réduction d'un contrat
